<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Card"
    android:layout_marginTop="@dimen/margin_vertical_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_vertical_extra_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_vertical_extra_small">

        <ImageButton
            android:id="@+id/ib_deadline"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:contentDescription="@string/card_pages_ib_deadline"
            android:src="@drawable/ic_mdi_alarm_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_more_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/card_pages_ib_popup_menu"
            android:src="@drawable/ic_mdi_more_vert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/card_pages_tv_no_due_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="@+id/ib_deadline"
            app:layout_constraintStart_toEndOf="@+id/ib_deadline"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_card_title"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/margin_vertical_extra_small"
            android:layout_marginBottom="@dimen/margin_vertical_medium"
            android:maxLines="3"
            android:text="@string/card_pages_tv_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_unique_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_deadline"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_unique_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pages_tv_unique_code"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toTopOf="@+id/tv_unique_code_value"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_unique_code_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pages_tv_unique_code_value"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ib_unique_code_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/card_pages_ib_copy"
            android:src="@drawable/ic_mdi_file_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>