<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_on_boarding_2"
        android:layout_width="307dp"
        android:layout_height="317dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/draw_onboard_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_on_boarding_2_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_extra_small"
        android:text="@string/on_boarding_2_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/iv_on_boarding_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_on_boarding_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_on_boarding_2" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_small"
        android:text="@string/on_boarding_2_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/iv_on_boarding_2"
        app:layout_constraintStart_toStartOf="@+id/iv_on_boarding_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_on_boarding_2_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_previous"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_vertical_extra_small"
        android:layout_marginBottom="@dimen/margin_vertical_extra_small"
        android:text="@string/on_boarding_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_vertical_extra_small"
        android:layout_marginBottom="@dimen/margin_vertical_extra_small"
        android:text="@string/on_boarding_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>